01_practice-test/15_network_policy/01_setup.yaml

apiVersion: v1
kind: Namespace
metadata:
  name: app-stack

---
apiVersion: v1
kind: Pod  
metadata:
  name: frontend
  namespace: app-stack
  labels:
    app: todo
    tier: frontend
spec:
  containers:
  - image: nginx
    name: frontend

---

apiVersion: v1
kind: Pod
metadata:
  name: backend
  namespace: app-stack
  labels:
   app: todo
   tier: backend
spec: 
  containers:
  - image: nginx
    name: backend

---

apiVersion: v1
kind: Pod
metadata:
 name: database
 namespace: app-stack
 labels:
   tier: database
   app: todo
spec:
  containers:
  - image: nginx
    name: database
